# rag-comparison

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: README.md
docs/: 01-concepts.md  02-architecture.md  03-tradeoffs.md  04-when-to-use.md
notebooks/: 00_setup_and_data.ipynb  01_kg_rag_walkthrough.ipynb  02_hybrid_rag_walkthrough.ipynb  03_agentic_rag_walkthrough.ipynb  04_side_by_side_comparison.ipynb  05_evaluation_and_costs.ipynb
src/rag_compare/: __init__.py
src/rag_compare/agentic_rag/: __init__.py  pipeline.py
src/rag_compare/common/: __init__.py  chunking.py  config.py  corpus.py  embeddings.py  fetch_corpus.py  llm.py
src/rag_compare/eval/: __init__.py  golden.py  harness.py
src/rag_compare/hybrid_rag/: __init__.py  pipeline.py
src/rag_compare/kg_rag/: __init__.py  pipeline.py
tests/: test_smoke.py
