[project]
name = "rag-compare"
version = "0.1.0"
description = "Educational comparison of KG-RAG, Hybrid RAG, and Agentic RAG patterns"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    # Orchestration
    "llama-index>=0.11",
    "llama-index-graph-stores-neo4j>=0.3",
    "llama-index-vector-stores-qdrant>=0.3",
    "llama-index-embeddings-openai>=0.2",
    "llama-index-embeddings-huggingface>=0.3",
    "llama-index-llms-openai>=0.2",
    "llama-index-llms-anthropic>=0.3",
    "llama-index-retrievers-bm25>=0.4",

    # Stores
    "neo4j>=5.20",
    "qdrant-client>=1.10",

    # Hybrid retrieval
    "rank-bm25>=0.2.2",
    "sentence-transformers>=3.0",

    # Agentic
    "langgraph>=0.2",
    "langchain-core>=0.3",

    # Eval
    "ragas>=0.2",
    "datasets>=2.20",

    # Notebooks + utils
    "jupyter>=1.0",
    "ipywidgets>=8.1",
    "pandas>=2.2",
    "matplotlib>=3.9",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "pydantic>=2.7",

    # Starter corpus
    "wikipedia-api>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "nbstripout>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_compare"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
